Clean remaining hybrid MCP and file-state Sonar findings